tests/compile/command_modules/compute.stderr
In file included from compute.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
In file included from commands.hpp:8:
command_normalization.hpp:219:18: error: static assertion failed: command recording has unresolved dependencies
  219 |                         static_assert(false, "command recording has unresolved dependencies"_ss);
      |                                       ^~~~~
command_normalization.hpp:275:35: note: in instantiation of function template specialization 'rcgp::detail::normalize_step<rcgp::Tlist<rcgp::detail::effect_entry<rcgp::detail::key_ref<params_a>, rcgp::detail::tag_dep, rcgp::detail::no_bar>>, rcgp::Tlist<>, rcgp::DependencySentinel>' requested here
  275 | using normalize_step_t = decltype(normalize_step(Map(), Indicators(), Effect()));
      |                                   ^
command_normalization.hpp:288:15: note: in instantiation of template type alias 'normalize_step_t' requested here
  288 |         using step = normalize_step_t <Map, Indicators, Head>;
      |                      ^
command_normalization.hpp:291:23: note: in instantiation of template class 'rcgp::detail::normalize_fold<rcgp::Tlist<rcgp::detail::effect_entry<rcgp::detail::key_ref<params_a>, rcgp::detail::tag_dep, rcgp::detail::no_bar>>, rcgp::Tlist<>, rcgp::DependencySentinel>' requested here
  291 |         using map = typename normalize_fold <next_map, next_indicators, Tail...> ::map;
      |                              ^
command_normalization.hpp:371:23: note: in instantiation of template class 'rcgp::detail::normalize_fold<rcgp::Tlist<>, rcgp::Tlist<>, rcgp::Dependency<params_a>, rcgp::DependencySentinel>' requested here
  371 |         using map = typename normalize_fold <Tlist <>, Tlist <>, Effects...> ::map;
      |                              ^
command_normalization.hpp:376:1: note: in instantiation of template class 'rcgp::detail::normalize_effects<rcgp::Tlist<rcgp::Dependency<params_a>, rcgp::DependencySentinel>>' requested here
  376 | using normalize_effects_t = typename normalize_effects <List> ::type;
      | ^
commands.hpp:56:30: note: in instantiation of template type alias 'normalize_effects_t' requested here
   56 |                 using normalized = detail::normalize_effects_t <combined>;
      |                                            ^
compute.cpp:110:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::DependencySentinel>' requested here
  110 |                 | dispatch(64);
      |                 ^
1 error generated.
